[EFL] Fix build break since r174231 and r174256 https://bugs.webkit.org/show_bug.cgi?id=137384

Unreviewed, EFL build fix.

r174231 and r174256 didn't consider EFL port and CoordinatedGraphics area.

Source/WebCore:

* css/WebKitCSSViewportRule.cpp:
(WebCore::WebKitCSSViewportRule::WebKitCSSViewportRule):
* css/WebKitCSSViewportRule.h:

Source/WebKit2:

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.cpp:
(WebKit::CoordinatedDrawingArea::mainFrameContentSizeChanged):
* WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:
(WebKit::CoordinatedLayerTreeHost::setRootCompositingLayer):
(WebKit::CoordinatedLayerTreeHost::didFlushRootLayer):
(WebKit::CoordinatedLayerTreeHost::deviceOrPageScaleFactorChanged):
* WebProcess/WebPage/TapHighlightController.cpp:
(WebKit::TapHighlightController::highlight):
(WebKit::TapHighlightController::hideHighlight):
* WebProcess/WebPage/TapHighlightController.h: Add WebCore:: namespace prefix to PageOverlay argument type.

Canonical link: https://commits.webkit.org/155179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174261 268f45cc-cd09-0410-ab3c-d52691b4dbfc